fixed layout issue on .main .section (Safari)

--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -118,7 +118,7 @@
     .firstSectionTextContainer {
         padding: 25px;
         border-radius: 0 0 8px 8px;
-        max-height: fit-content;
+        max-height: none;
     }
 
     .firstSectionTextContainer p {
